@startuml

title __IMPL's Class Diagram__\n

  namespace br.com.psytecnology {
    namespace service {
      namespace impl {
        class br.com.psytecnology.service.impl.PedidosServiceImpl {
            + PedidosServiceImpl()
            + atualizarStatus()
            + delete()
            + findPedidoById()
            + obterPedidoCompleto()
            + save()
        }
      }
    }
  }
  

  namespace br.com.psytecnology {
    namespace service {
      namespace impl {
        class br.com.psytecnology.service.impl.UsuarioServiceImpl {
            - passwordEncoder : PasswordEncoder
            + UsuarioServiceImpl()
            + autenticar()
            + criarUsuario()
            + loadUserByUsername()
        }
      }
    }
  }
  

  br.com.psytecnology.service.impl.PedidosServiceImpl .up.|> br.com.psytecnology.service.PedidosService
  br.com.psytecnology.service.impl.PedidosServiceImpl o-- br.com.psytecnology.domain.repository.ClientesRepository : clientesRepository
  br.com.psytecnology.service.impl.PedidosServiceImpl o-- br.com.psytecnology.domain.repository.ItemPedidoRepository : itemPedidoRepository
  br.com.psytecnology.service.impl.PedidosServiceImpl o-- br.com.psytecnology.domain.entity.dto.MapperDtoToEntity : mapperDtoToEntity
  br.com.psytecnology.service.impl.PedidosServiceImpl o-- br.com.psytecnology.domain.repository.PedidosRepository : pedidosRepository
  br.com.psytecnology.service.impl.PedidosServiceImpl o-- br.com.psytecnology.domain.repository.ProdutosRepository : produtosRepository
  br.com.psytecnology.service.impl.UsuarioServiceImpl .up.|> br.com.psytecnology.service.UsuarioService
  br.com.psytecnology.service.impl.UsuarioServiceImpl o-- br.com.psytecnology.domain.repository.UsuarioRepository : usuarioRepository


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
